--- a/stage2_classifier/config.json
+++ b/stage2_classifier/config.json
@@ -1,9 +1,9 @@
 {
     "data_models": "WordEmbedding,Metadata,Combined",
-    "classifiers": "SVM,NaiveBayes,MLP",
+    "classifiers": "SVM,NaiveBayes,MLP,DT,KNN,RandomForest,Adaboost,GradientBoost",
     "metrics": "Precision,Recall,F1",
     "raw_data_path": "topicclass/topicclass_train_small.txt",
     "metrics_path": "output",
     "train_ratio": 0.8,
-    "verbose_mode": "False"
+    "verbose_mode": false
 }
