--- a/boom/conf.yaml
+++ b/boom/conf.yaml
@@ -28,9 +28,9 @@ modules:
         params:
             -   name: test_ratio
                 type: float
-                start: 0.2
-                end: 0.4
-                step_size: 0.2
+                start: 0.1
+                end: 0.3
+                step_size: 0.1
 
             -   name: classifier
                 type: collection # Type of the param, int, float or collection
@@ -46,6 +46,11 @@ modules:
 
 
     -   name: writer
-        type: CSVWriter
-        output_file: results.csv 
+        type: SortedCSVWriter
+        output_file: ../results.csv
         instances: 1
+        params:
+            - name: key_column
+              type: collection
+              values:
+                  - F1
