adding file upload in graph_constructor

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -1,6 +1,9 @@
 pipeline: # Pipeline section, defines pipeline's properties
     mode: local # Running mode, local or docker, default local
-    name: text_classifier # Name of the pipeline
+    project_name: text_classifier # Name of the pipeline
+    admin_token: EmDICTBF1ppONSciYVd03M9xkmF6hFqW
+    user_name: AnalyticsTeam
+
 
 modules:
     -   node: reader # Name of the module
