--- a/sample/_history.yaml
+++ b/sample/_history.yaml
@@ -3,23 +3,23 @@ credentials:
   ACAI_TOKEN: 0x6uE8asqCZhXSAHYAiYX9Hjum3vGb3q
 file_versions:
   _append1.py:
-    time: '1573616626.8876302'
-    version: 18
+    time: '1574739063.0923595'
+    version: 22
   _append2.py:
-    time: '1573616626.8877404'
-    version: 17
+    time: '1574739063.0924287'
+    version: 21
   _history.yaml:
-    time: '1573616911.9204652'
-    version: 80
+    time: '1574739062.267064'
+    version: 87
   _reader.py:
-    time: '1573616626.6772077'
-    version: 37
+    time: '1574739062.267801'
+    version: 41
   _reader.zip:
     time: '1573616094.0526204'
     version: 1
   _writer.py:
-    time: '1573616627.2988656'
-    version: 8
+    time: '1574739066.3279612'
+    version: 12
   acai_output/append1.pkl:
     time: '1573253354.8731728'
     version: 0
