--- a/sample2/_history.yaml
+++ b/sample2/_history.yaml
@@ -3,14 +3,17 @@ credentials:
   ACAI_TOKEN: sTk9P5poZYtB1yaI77T3r14ITgVDM4m6
 file_versions:
   _append1.py:
-    time: '1573618263.4030523'
-    version: 0
-  _history.yaml:
-    time: '1574581466.4096363'
-    version: 22
-  _reader.py:
-    time: '1574542227.5630374'
+    time: '1574738645.2651298'
     version: 1
+  _history.yaml:
+    time: '1574742424.4446225'
+    version: 27
+  _reader.py:
+    time: '1574738644.4437993'
+    version: 2
+  _writer.py:
+    time: '1574738647.043392'
+    version: 0
   config.yaml:
     time: '1573617159.6906524'
     version: 0
