add result retrieval to scheduler

--- a/sample2/_history.yaml
+++ b/sample2/_history.yaml
@@ -6,8 +6,8 @@ file_versions:
     time: '1574738645.2651298'
     version: 1
   _history.yaml:
-    time: '1574742424.4446225'
-    version: 27
+    time: '1574746852.159173'
+    version: 29
   _reader.py:
     time: '1574738644.4437993'
     version: 2
