bug fix for result node

--- a/sample2/config.yaml
+++ b/sample2/config.yaml
@@ -55,3 +55,7 @@ modules:
                     - RandomForest
                     - Adaboost
                     - GradientBoost
+        optimize:
+                metric: sum_of_stuff
+                direction: max # min | max
+                search: grid # grid | bayesian (if bayesian, must be all float)
