add performance curve

--- a/sample/_history.yaml
+++ b/sample/_history.yaml
@@ -15,8 +15,8 @@ file_versions:
     time: '1575017067.2264874'
     version: 0
   _history.yaml:
-    time: '1575232667.293892'
-    version: 37
+    time: '1575232829.5210197'
+    version: 38
   _reader.py:
     time: '1575232396.0688047'
     version: 2
